ISIS-537: CSS fixes for (a) collection contents as summary and (b) to stop value choices (eg category/subcategory) from "flickering" as much.

--- a/component/viewer/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides.css
+++ b/component/viewer/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides.css
@@ -302,6 +302,10 @@ body {
 
 /* from CollectionContentsAsSummary */
 
+.collectionContentsAsSummary {
+    padding-top: 15px;
+}
+
 .collectionContentsAsSummary .propertyNameCell,
 .collectionContentsAsSummary .aggregatesCell {
     vertical-align: middle;
@@ -674,3 +678,8 @@ div.label-left .choicesPlaceholder {
 .navbar-header a.navbar-brand {
     margin-top: -2px;
 }
+
+.valueChoicesSelect2Panel .scalarValueWrapper .choicesPlaceholder {
+    height: 33px;
+}
+
